--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,5 @@
-datasource.url=jdbc:mysql://localhost:3306/
-datasource.username=root
-datasource.password=P@ssw0rd
-datasource.testdb=easyshop_test
+spring.datasource.url=jdbc:mysql://localhost:3306/easyshop
+spring.datasource.username=root
+spring.datasource.password=yearup
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=none
